--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ i {
 }
 
 a {
-  color: #29270c !important;
+  color: #157581 !important;
 }
 
 a:hover {
@@ -24,6 +24,7 @@ a:hover {
 
 a:active {
   text-decoration: underline;
+  color: blue;
 }
 
 .container {
